--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Pixelify+Sans:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Damion&display=swap');
 body{
-    font-family: "IBM Plex Mono", monospace;
+    font-family: "Neue montreal";
     scroll-behavior: smooth;
 }
 ::-webkit-scrollbar{
     width: 0px;
 }
+.displaytxt{
+    font-family: "Damion", cursive;
+}
 #main{
-    background-image: url('./Assets/background.png');
+    background-image: url('./Assets/back2.png');
     background-repeat: no-repeat;
     background-size: cover;
 }
