--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,11 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 }
+.navbar{
+    top: 0%;
+    left: 38%;
+    position:fixed;
+}
 .custom h2{
    
     padding: 10px;
@@ -36,6 +41,7 @@ body{
     margin-right: 6px;
     border: 2px solid black;
 }
+
 .skills-h1{
     font-size: 25px;
     font-weight: 500;
@@ -44,6 +50,9 @@ body{
     #main{
         background-image: none;
         /* display: none; */
+    }
+    .navbar{
+        left: 10%;
     }
     .skills-h1{
         font-size: 18px;
