--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body{
     font-family: "Damion", cursive;
 }
 #main{
-    background-image: url('./Assets/back2.png');
+    background-image: url('./Assets/bgnew.svg');
     background-repeat: no-repeat;
     background-size: cover;
 }
